# CG_Final

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_linux.sh  main.cpp
assets/model/json/: cube.json  terrain.json  triangle.json  water.json
assets/shaders/: composite1.fsh  composite2.fsh  gbuffers_model.fsh  gbuffers_robot.fsh  gbuffers_sun.fsh  gbuffers_sun.vsh  gbuffers_terrain.fsh  gbuffers_terrain.vsh  gbuffers_water.fsh  gbuffers_water.vsh  gbuffers_water_reflection.fsh  gbuffers_water_reflection.vsh  shadow.vsh  sky.vsh  terrain_compute.comp  triangle.fsh  triangle.vsh
env/: env_path.json  settings.json
include/: GLM.h  TriMesh.h  global_env.hpp
include/Camera/: Camera.cpp  Camera.h
include/FrameBuffer/: FrameBuffer.h
include/GBUFFER/: gbuffer.h
include/GBuffer/: gbuffer.h
include/Model/: Mesh.h  Model.h
include/Robot/: Robot.h  Robot.hpp
include/Shader/: Shader.h
include/Texture/: Texture.cpp  Texture.h
include/framework/: config_loader.hpp  engine.cpp  engine.hpp  global_env.hpp  tools.hpp
include/glad/: glad.h
include/mgr/: mgr_base.hpp
include/mgr/assets_mgr/: assets_mgr.hpp
include/mgr/camera_mgr/: camera_mgr.hpp
include/mgr/input_mgr/: input_mgr.hpp
include/mgr/render_mgr/: render_mgr.hpp
include/model/: cube.hpp  quad.hpp  sun.hpp  terrain.hpp  triangle.hpp  water.hpp
include/opengl_ext/: assimp_model.hpp  buffer.hpp  camera.hpp  glm.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp  window.hpp
model/mterrain/: LPTerrain2.blend
shaders/: composite1.fsh  composite2.fsh  debug.fsh  gbuffers_model.fsh  gbuffers_model.vsh  gbuffers_robot.vsh  gbuffers_terrain.fsh  gbuffers_terrain.vsh  gbuffers_water.fsh  gbuffers_water.vsh  sky.fsh
src/: TriMesh.cpp  global_env.cpp  main.cpp
src/framework/: config_loader.cpp  engine.cpp  global_env.cpp
src/glad_src/: glad.c
src/mgr/: mgr_base.cpp
src/mgr/assets_mgr/: assets_mgr.cpp
src/mgr/camera_mgr/: camera_mgr.cpp
src/mgr/input_mgr/: input_mgr.cpp
src/mgr/render_mgr/: render_mgr.cpp
src/model/: cube.cpp  terrain.cpp  water.cpp
src/opengl_ext/: assimp_model.cpp  buffer.cpp  camera.cpp  glad.c  mesh.cpp  model.cpp  shader.cpp  texture.cpp  window.cpp
